# se-toolkit-lab-8

./: REPORT.md  docker-compose.yml  pyproject.toml  webchat_client.py  webchat_listen.py  webchat_reconnect.py  webchat_task4b.py  webchat_wait_cron.py
.qwen/: settings.json
caddy/: Caddyfile
mcp/: pyproject.toml
mcp/mcp-obs/: pyproject.toml
mcp/mcp-obs/src/mcp_obs/: observability.py  server.py  settings.py  tools.py
nanobot/: Dockerfile  entrypoint.py
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
scripts/: test-obs.py
